Score-P now external as it should be

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -317,8 +317,10 @@ elseif(${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER")
 endif()
 
 if(NOT "${FIRESTARTER_TRACING}" STREQUAL "None")
-	string(STRIP "${FIRESTARTER_TRACING_LDFLAGS}" FIRESTARTER_TRACING_LDFLAGS)
+	string(STRIP "${FIRESTARTER_TRACING_LD_FLAGS}" FIRESTARTER_TRACING_LD_FLAGS)
 	target_link_libraries("${FIRESTARTER_BUILD_TYPE}"
-		"${FIRESTARTER_TRACING_LDFLAGS}"
+		"${FIRESTARTER_TRACING_LD_FLAGS}"
 		)
 endif()
+
+message(STATUS "FIRESTARTER_TRACING_LD_FLAGS: ${FIRESTARTER_TRACING_LD_FLAGS}")
