--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -8,6 +8,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'
 
     # Ideally we would want to run the clang-tidy for every kind of build.
     # This would make shure that we will check all platform dependent code parts.
