--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,7 +7,7 @@ jobs:
   build-linux-hip-rocm:
     strategy:
 #      max-parallel: 1 # Sets the limit of jobs to run concurrently
-      fail-fast: true
+      fail-fast: false
       matrix:
         os: [ubuntu-22.04]
         compiler: [g++-9, g++-10, g++-11, g++-12, clang++-11, clang++-12, clang++-13, clang++-14, clang++-15]
@@ -115,7 +115,7 @@ jobs:
   build-linux:
     strategy:
 #      max-parallel: 1 # Sets the limit of jobs to run concurrently
-      fail-fast: true
+      fail-fast: false
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
