--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -1,6 +1,6 @@
 name: clang-tidy-review
 
-on: [pull_request]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -13,16 +13,26 @@ jobs:
 
     # Ideally we would want to run the clang-tidy for every kind of build.
     # This would make shure that we will check all platform dependent code parts.
-    # Here we only test the standard linux build.
-    - uses: ZedThree/clang-tidy-review@v0.14.0
-      id: review
-      with:
-        split_workflow: true
-        config_file: '.clang-tidy'
-        cmake_command: 'cmake . && make -j2'
+    # Here we only test the standard linux build.    
+    - name: Install python3 and libraries
+      run: |
+        sudo apt update
+        sudo apt install python3 python3-pip
+        pip install click
 
-    - uses: ZedThree/clang-tidy-review/upload@v0.14.0
-      id: upload-review
+    - name: Create build directory
+      run: |
+          mkdir build
 
-    - if: steps.review.outputs.total_comments > 0
-      run: exit 1
+    - name: Run CMake configure (default)
+      run: |
+        cd build
+        cmake ..
+
+    - name: Run clang-tidy
+      run: |
+          ./tooling/clang-tidy.py --build-root build
+
+    - name: Print report
+      run: |
+          cat build/clang-tidy-report.txt
