move cmake cxx standard definition up in hierarchy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(FIRESTARTER)
 enable_testing()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_CXX_STANDARD 17)
 
 include(cmake/GitSubmoduleUpdate.cmake)
 
