--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,46 +57,10 @@ endif()
 include(cmake/GitSubmoduleUpdate.cmake)
 git_submodule_update()
 
+include(cmake/BuildOptions.cmake)
+include(cmake/BuildSettings.cmake)
+
 include(cmake/DarwinBuild.cmake)
-
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-else()
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O2 -fdata-sections -ffunction-sections")
-endif()
-
-if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-dead_strip")
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-else()
-	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
-endif()
-
-if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-	# enable position independant code on linux
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-
-	# enable debug features on linux
-	option(FIRESTARTER_DEBUG_FEATURES "Enable debug features" ON)
-	if (FIRESTARTER_DEBUG_FEATURES)
-		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DFIRESTARTER_DEBUG_FEATURES")
-	endif()
-endif()
-
-set(FIRESTARTER_BUILD_TYPE "FIRESTARTER" CACHE STRING "FIRESTARTER_BUILD_TYPE can be any of FIRESTARTER, FIRESTARTER_CUDA, FIRESTARTER_ONEAPI, or FIRESTARTER_HIP.")
-set_property(CACHE FIRESTARTER_BUILD_TYPE PROPERTY STRINGS FIRESTARTER FIRESTARTER_CUDA FIRESTARTER_ONEAPI)
-if (${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER")
-	option(FIRESTARTER_LINK_STATIC "Link FIRESTARTER as a static binary. Note, dlopen is not supported in static binaries. This option is not available on macOS or with CUDA or OneAPI enabled." ON)
-endif()
-if (${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER")
-	option(FIRESTARTER_BUILD_HWLOC "Build hwloc dependency." ON)
-elseif(${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER_CUDA")
-	option(FIRESTARTER_BUILD_HWLOC "Build hwloc dependency." ON)
-elseif(${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER_ONEAPI")
-	option(FIRESTARTER_BUILD_HWLOC "Build hwloc dependency." ON)
-elseif(${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER_HIP")
-	option(FIRESTARTER_BUILD_HWLOC "Build hwloc dependency." ON)
-endif()
-option(FIRESTARTER_THREAD_AFFINITY "Enable FIRESTARTER to set affinity to hardware threads." ON)
 
 if(NOT DEFINED ASMJIT_STATIC)
 	set(ASMJIT_STATIC TRUE)
@@ -116,11 +80,6 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 include(cmake/InstallHwloc.cmake)
-
-# General linker flags
-if (FIRESTARTER_THREAD_AFFINITY)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DFIRESTARTER_THREAD_AFFINITY")
-endif()
 
 add_subdirectory(src)
 
