--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,7 +10,6 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-22.04]
-        compiler: [g++-9, g++-10, g++-11, g++-12, clang++-11, clang++-12, clang++-13, clang++-14, clang++-15]
         HIP: ['6.2']
     runs-on: ${{ matrix.os }}
 
@@ -24,42 +23,6 @@ jobs:
         sudo rm -rf /opt/ghc
         sudo rm -rf /usr/local/.ghcup
 
-    - name: Install g++-9 (if needed)
-      if: matrix.compiler == 'g++-9'
-      run: |
-        sudo apt install g++-9
-    - name: Install g++-10 (if needed)
-      if: matrix.compiler == 'g++-10'
-      run: |
-        sudo apt install g++-10
-    - name: Install g++-11 (if needed)
-      if: matrix.compiler == 'g++-11'
-      run: |
-        sudo apt install g++-11
-    - name: Install g++-12 (if needed)
-      if: matrix.compiler == 'g++-12'
-      run: |
-        sudo apt install g++-12
-    - name: Install clang++-11 (if needed)
-      if: matrix.compiler == 'clang++-11'
-      run: |
-        sudo apt install clang-11
-    - name: Install clang++-12 (if needed)
-      if: matrix.compiler == 'clang++-12'
-      run: |
-        sudo apt install clang-12
-    - name: Install clang++-13 (if needed)
-      if: matrix.compiler == 'clang++-13'
-      run: |
-        sudo apt install clang-13
-    - name: Install clang++-14 (if needed)
-      if: matrix.compiler == 'clang++-14'
-      run: |
-        sudo apt install clang-14
-    - name: Install clang++-15 (if needed)
-      if: matrix.compiler == 'clang++-15'
-      run: |
-        sudo apt install clang-15
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
@@ -69,7 +32,6 @@ jobs:
       with:
         fetch-depth: '0'
     - name: Install HIP runtime (if needed)
-      if: matrix.HIP != '0' && matrix.ONEAPI == 0 && matrix.CUDA == 0
       run: |
         case ${{ matrix.HIP }} in
           6.2)
@@ -83,9 +45,9 @@ jobs:
       run: |
           mkdir build
     - name: Run CMake configure (HIP)
-      if: matrix.HIP != '0' && matrix.CUDA == '0' && matrix.ONEAPI == '0'
       env:
-        CXX: ${{ matrix.compiler }}
+        CMAKE_C_COMPILER: '/opt/rocm/bin/hipcc'
+        CMAKE_CXX_COMPILER: '/opt/rocm/bin/hipcc'
       run: |
         export CPATH=${HIP_ROOT}/include:${HIP_ROOT}
         export LD_LIBRARY_PATH=${HIP_ROOT}/lib64:${HIP_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
@@ -98,22 +60,21 @@ jobs:
 
         cd build
         cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_HIP" -DCMAKE_EXE_LINKER_FLAGS="-L${HIP_ROOT}/lib64/stubs/" ..
-    - name: Build (default, CUDA, HIP)
-      if: matrix.ONEAPI =='0'
+    - name: Build (HIP)
       run: |
         cd build
         make -j2
     - name: Strip binary (HIP)
-      if: matrix.CUDA == '0' && matrix.HIP != '0' && matrix.ONEAPI == '0'
       run: |
         cd build
         strip src/FIRESTARTER_HIP
     - uses: actions/upload-artifact@v4
-      if: matrix.compiler == 'g++-9' && matrix.HIP != '0' && matrix.CUDA == '0' && matrix.ONEAPI == '0' && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
+      if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
       with:
         name: FIRESTARTER_HIP_${{ matrix.HIP }}-linux
         retention-days: 1
         path: build/src/FIRESTARTER_HIP
+
   build-linux:
     strategy:
 #      max-parallel: 1 # Sets the limit of jobs to run concurrently
