--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -145,25 +145,107 @@ jobs:
         sudo apt remove intel-basekit-${{ matrix.ONEAPI }}
         sudo apt autoremove      
 
+  build-linux-cuda:
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-20.04]
+        CUDA: ['8.0', '11.0', 'NVHPC-22.5']
+  
+    runs-on: ${{ matrix.os }}
+  
+    env:
+      CUDA_ROOT: '/usr/local/cuda'
+    steps:
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'
+    - name: Install CUDA runtime (if needed)
+      run: |
+        case ${{ matrix.CUDA }} in
+          8.0)
+            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run
+            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/patches/2/cuda_8.0.61.2_linux-run
+            sudo sh cuda_8.0.61_375.26_linux-run --extract=${CUDA_ROOT}
+            sudo sh ${CUDA_ROOT}/cuda-linux64-rel-8.0.61-21551265.run --tar mxvf -C ${CUDA_ROOT}
+            sudo sh cuda_8.0.61.2_linux-run --accept-eula --silent --installdir=${CUDA_ROOT}
+            rm cuda_8.0.61_375.26_linux-run
+            rm cuda_8.0.61.2_linux-run
+            ;;
+          11.0)
+            wget https://developer.download.nvidia.com/compute/cuda/11.0.3/local_installers/cuda_11.0.3_450.51.06_linux.run
+            sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT} --override --silent
+            rm cuda_11.0.3_450.51.06_linux.run
+            ;;
+          NVHPC-22.5)
+            wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            rm nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="$CUDA_ROOT" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
+            rm -rf nvhpc_2022_225_Linux_x86_64_cuda_11.7
+            ;;
+        esac
+    - name: Create build directory
+      run: |
+        mkdir build
+    - name: Run CMake configure (CUDA)
+      if: matrix.CUDA != 'NVHPC-22.5'
+      run: |
+        export CPATH=${CUDA_ROOT}/include:${CPATH}
+        export LD_LIBRARY_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
+        export LIBRARY_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs:${LIBRARY_PATH}
+        export CUDA_LIB_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs
+        export PATH=${CUDA_ROOT}:${PATH}
+        export CUDA_HOME=${CUDA_ROOT}
+        export CUDA_PATH=${CUDA_ROOT}
+        export CUDAToolkit_ROOT=${CUDA_ROOT}
+  
+        cd build
+        cmake  -DCMAKE_C_COMPILER=nvcc -DCMAKE_CXX_COMPILER=nvcc -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}/lib64/stubs/" ..
+    - name: Run CMake configure (CUDA with NVHPC)
+      if: matrix.CUDA == 'NVHPC-22.5'
+      run: |
+        NVARCH=`uname -s`_`uname -m`; export NVARCH
+        PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/bin:$PATH; export PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+  
+        cd build
+        cmake -DCMAKE_C_COMPILER=nvc -DCMAKE_CXX_COMPILER=nvc++ -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs" -LA ..
+    - name: Build (CUDA)
+      run: |
+        cd build
+        make -j2
+    - name: Strip binary (CUDA)
+      run: |
+        cd build
+        strip src/FIRESTARTER_CUDA
+    - uses: actions/upload-artifact@v4
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
+      with:
+        name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
+        retention-days: 1
+        path: build/src/FIRESTARTER_CUDA
+    - name: UnInstall CUDA runtime (if needed)
+      run: |
+        sudo rm -rf ${CUDA_ROOT}
+      
   build-linux:
     strategy:
-#      max-parallel: 1 # Sets the limit of jobs to run concurrently
       fail-fast: true
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
 
     runs-on: ${{ matrix.os }}
 
-    env:
-      CUDA_ROOT: '/usr/local/cuda'
-#kudos to https://github.com/easimon/maximize-build-space/blob/master/action.yml
     steps:
-    - name: Try to clean up some things
-      run: |
-        sudo rm -rf /usr/local/lib/android
-        sudo rm -rf /usr/share/dotnet
     - name: Install g++-7 (if needed)
       if: matrix.compiler == 'g++-7'
       run: |
@@ -192,102 +274,31 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: '0'
-    - name: Install CUDA runtime (if needed)
-      if: matrix.CUDA != '0'
-      run: |
-        case ${{ matrix.CUDA }} in
-          8.0)
-            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run
-            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/patches/2/cuda_8.0.61.2_linux-run
-            sudo sh cuda_8.0.61_375.26_linux-run --extract=${CUDA_ROOT}
-            sudo sh ${CUDA_ROOT}/cuda-linux64-rel-8.0.61-21551265.run --tar mxvf -C ${CUDA_ROOT}
-            sudo sh cuda_8.0.61.2_linux-run --accept-eula --silent --installdir=${CUDA_ROOT}
-            rm cuda_8.0.61_375.26_linux-run
-            rm cuda_8.0.61.2_linux-run
-            ;;
-          11.0)
-            wget https://developer.download.nvidia.com/compute/cuda/11.0.3/local_installers/cuda_11.0.3_450.51.06_linux.run
-            sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT} --override --silent
-            rm cuda_11.0.3_450.51.06_linux.run
-            ;;
-          NVHPC-22.5)
-            wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-            tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-            rm nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-            sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="$CUDA_ROOT" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
-            rm -rf nvhpc_2022_225_Linux_x86_64_cuda_11.7
-
-        esac
     - name: Create build directory
       run: |
         mkdir build
     - name: Run CMake configure (default)
-      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
       env:
         CXX: ${{ matrix.compiler }}
       run: |
         cd build
         cmake ..
-    - name: Run CMake configure (CUDA)
-      if: matrix.CUDA != '0' && matrix.CUDA != 'NVHPC-22.5' && matrix.ONEAPI == '0'
-      env:
-        CXX: ${{ matrix.compiler }}
-      run: |
-        export CPATH=${CUDA_ROOT}/include:${CPATH}
-        export LD_LIBRARY_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
-        export LIBRARY_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs:${LIBRARY_PATH}
-        export CUDA_LIB_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs
-        export PATH=${CUDA_ROOT}:${PATH}
-        export CUDA_HOME=${CUDA_ROOT}
-        export CUDA_PATH=${CUDA_ROOT}
-        export CUDAToolkit_ROOT=${CUDA_ROOT}
-
-        cd build
-        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}/lib64/stubs/" ..
-    - name: Run CMake configure (CUDA with NVHPC)
-      if: matrix.CUDA == 'NVHPC-22.5' && matrix.ONEAPI == '0'
-      env:
-        CXX: ${{ matrix.compiler }}
-      run: |
-        NVARCH=`uname -s`_`uname -m`; export NVARCH
-        PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/bin:$PATH; export PATH
-        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-
-        cd build
-        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs" -LA ..
-    - name: Build (default, CUDA)
-      if: matrix.ONEAPI =='0'
+    - name: Build (default)
       run: |
         cd build
         make -j2
     - name: Strip binary (default)
-      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
       run: |
         cd build
         strip src/FIRESTARTER
-    - name: Strip binary (CUDA)
-      if: matrix.CUDA != '0' && matrix.ONEAPI == '0'
-      run: |
-        cd build
-        strip src/FIRESTARTER_CUDA
     - name: Test FIRESTARTER (default)
-      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
       run: ./build/src/FIRESTARTER -t 1
     - uses: actions/upload-artifact@v4
-      if: matrix.compiler == 'clang++-10' && matrix.CUDA == '0' && matrix.ONEAPI == '0' && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
+      if: matrix.compiler == 'clang++-10' && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
       with:
         name: FIRESTARTER-linux
         retention-days: 1
         path: build/src/FIRESTARTER
-    - uses: actions/upload-artifact@v4
-      if: matrix.compiler == 'clang++-10' && matrix.CUDA != '0' && matrix.ONEAPI == '0' && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
-      with:
-        name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
-        retention-days: 1
-        path: build/src/FIRESTARTER_CUDA
-
     - name: UnInstall g++-7 (if needed)
       if: matrix.compiler == 'g++-7'
       run: |
@@ -313,10 +324,6 @@ jobs:
       run: |
         sudo apt remove clang-10
         sudo apt autoremove
-    - name: UnInstall CUDA runtime (if needed)
-      if: matrix.CUDA != '0' && matrix.ONEAPI == '0'
-      run: |
-        sudo rm -rf ${CUDA_ROOT}
   
   build-windows:
     strategy:
