--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,6 +2,18 @@ name: Build
 
 on: [push, pull_request]
 
+# We define multiple jobs that test compatibility of the FIRESTARTER code aginst different compilers.
+# On linux:
+#   FIRESTARTER_HIP version 6.2 against the hipcc compiler
+#   FIRESTARTER_ONEAPI versions 2023.2.0 and 2024.0 against icx and icpx
+#   FIRESTARTER_CUDA with cuda versions 8.0, 11.0 and NVHPC-22.5 against clang++-10
+#   FIRESTARTER aginst g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10
+# On Windows:
+#   FIRESTARTER aginst windows-2019 MSVC and mingw
+#   FIRESTARTER_CUDA against windows-2019 MSVC
+# On MacOS:
+#   FIRESTARTER aginst XCode on MacOS 12 and 13
+
 jobs:
 
   build-linux-hip-rocm:
@@ -74,6 +86,7 @@ jobs:
         retention-days: 1
         path: build/src/FIRESTARTER_HIP
 
+
   build-linux-oneapi:
     strategy:
       fail-fast: true
@@ -145,6 +158,7 @@ jobs:
         sudo apt remove intel-basekit-${{ matrix.ONEAPI }}
         sudo apt autoremove      
 
+
   build-linux-cuda:
     strategy:
       fail-fast: true
@@ -197,6 +211,9 @@ jobs:
       run: |
         mkdir build
     - name: Run CMake configure (CUDA)
+      env:
+        C: 'clang-10'
+        CXX: 'clang++-10'
       if: matrix.CUDA != 'NVHPC-22.5'
       run: |
         export CPATH=${CUDA_ROOT}/include:${CPATH}
@@ -211,6 +228,9 @@ jobs:
         cd build
         cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}/lib64/stubs/" ..
     - name: Run CMake configure (CUDA with NVHPC)
+      env:
+        C: 'clang-10'
+        CXX: 'clang++-10'
       if: matrix.CUDA == 'NVHPC-22.5'
       run: |
         NVARCH=`uname -s`_`uname -m`; export NVARCH
@@ -220,7 +240,7 @@ jobs:
         LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
   
         cd build
-        cmake -DCMAKE_C_COMPILER=nvc -DCMAKE_CXX_COMPILER=nvc++ -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs" -LA ..
+        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs" -LA ..
     - name: Build (CUDA)
       run: |
         cd build
@@ -334,6 +354,7 @@ jobs:
         sudo apt remove clang-10
         sudo apt autoremove
   
+
   build-windows:
     strategy:
       fail-fast: false
