--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -80,7 +80,7 @@ jobs:
         cd build
         strip src/FIRESTARTER_HIP
     - uses: actions/upload-artifact@v4
-      if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
       with:
         name: FIRESTARTER_HIP_${{ matrix.HIP }}-linux
         retention-days: 1
