--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -500,7 +500,7 @@ jobs:
     name: Create download for Website
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
-    needs: [build-linux-hip-rocm, build-linux, build-macos, build-windows]
+    needs: [ build-linux-hip-rocm, build-linux-oneapi, build-linux-cuda, build-linux, build-macos, build-windows ]
     steps:
     - uses: actions/checkout@v4
       with:
