ci: disable fast fail in build-linux

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -256,7 +256,7 @@ jobs:
       
   build-linux:
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         include:
           # Oldest supported compiler on older Ubuntu
