refactor cpubind string parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,12 @@
 # Create the core firestarter library that is used in all builds and tests
 add_library(firestartercore STATIC
-	firestarter/Config.cpp
 	firestarter/Firestarter.cpp
 	firestarter/SafeExit.cpp
 	firestarter/WatchdogWorker.cpp
 	firestarter/DumpRegisterWorker.cpp
+
+	firestarter/Config/Config.cpp
+	firestarter/Config/CpuBind.cpp
 	
 	firestarter/Environment/X86/Platform/X86PlatformConfig.cpp
 
