add google test to cmake

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,4 +23,5 @@ endfunction()
 
 add_subdirectory(DumpCPUTopology)
 add_subdirectory(DumpPayloads)
+add_subdirectory(UnitTests)
 add_subdirectory(X86Functions)
