test function selection

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(UnitTests
     CpuBindTest.cpp
+    FunctionSelectionTest.cpp
     InstructionGroupsTest.cpp
     X86CpuFeaturesTest.cpp
     X86CpuModelTest.cpp
