fix windows test build

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -14,4 +14,4 @@ target_link_libraries(UnitTests
 )
 
 include(GoogleTest)
-gtest_discover_tests(UnitTests)
+gtest_discover_tests(UnitTests DISCOVERY_MODE PRE_TEST)
